# zingo-mobile

./: .gitignore  README.md  jest.config.js  package.json
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: android-build.yaml  android-macos-integration-test.yaml  android-ubuntu-e2e-test-ci.yaml  android-ubuntu-integration-test-ci.yaml  ci-nightly.yaml  ci.yaml  ios-build.yaml  ios-e2e-test.yaml
__mocks__/dataMocks/: mockAddresses.ts  mockValueTransfers.ts
__tests__/: App.snapshot.tsx  History.ValueTransferDetail.unit.tsx  History.snapshot.tsx  LoadedApp.snapshot.tsx  LoadingApp.snapshot.tsx  Messages.snapshot.tsx  MessagesAddress.snapshot.tsx  Receive.snapshot.tsx  Send.snapshot.tsx  Settings.snapshot.tsx
__tests__/__snapshots__/: AddressBook.AbDetail.snapshot.tsx.snap  Header.snapshot.tsx.snap  History.snapshot.tsx.snap  Insight.snapshot.tsx.snap  Messages.snapshot.tsx.snap  MessagesAddress.snapshot.tsx.snap  Pools.snapshot.tsx.snap  Seed.snapshot.tsx.snap  Settings.snapshot.tsx.snap  ShowUfvk.snapshot.tsx.snap
android/app/: build.gradle
app/: recoveryWalletInfo.ts  sendEmail.ts
app/AppState/: AppContextLoaded.ts  AppStateLoaded.ts  AppStateLoading.ts
app/LoadedApp/: LoadedApp.tsx
app/LoadingApp/: LoadingApp.tsx
app/context/: contextAppLoaded.tsx
e2e/: shielding.test.js
ios/: RPCModule.swift
rust/: Cargo.toml  Dockerfile
rust/android/: Cargo.toml
rust/android/tests/: e2e_tests.rs  integration_tests.rs
rust/ios/: build.sh  buildsimulator.sh
rust/lib/src/: lib.rs
scripts/: e2e_tests.sh  integration_tests.sh
(+53 files in other folders)
