[workspace]
members = ["lib", "android", "zingomobile_utils"]
resolver = "2"

[workspace.dependencies]
zingolib = { git = "https://github.com/zingolabs/zingolib", default-features = true, branch = "dev", features = [
    "test-elevation",
] }
uniffi = "0.27"
tokio = { version = "1.24", features = ["full"] }
rustls = { version = "0.23.13", features = ["ring"] }

[profile.release]
debug = false

[profile.test]
opt-level = 3
debug = false
